# ArquiPatterns

./: .gitignore  CMakeLists.txt  CentralCityArtichokePizza.h  CentralCityStore.h  Cheese.h  Dough.h  GothamStore.h  Ingredient.h  IngredientsFactory.h  MetropolisStore.h  Pizza.h  PizzaStore.h  Sauce.h  StarCityHawaiianPizza.h  StarCityIngredientsFactory.h  StarCityStore.h  main.cpp
